--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,7 @@ pycryptodome==3.4.3
 pylint==2.4.4
 Pyrebase==3.0.27
 python-jwt==2.0.1
+python-dotenv==0.13.0
 requests==2.11.1
 requests-toolbelt==0.7.0
 rsa==4.0
